# laura_core

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
build_dep/: between.rs  black_magics.rs  magics.rs  mod.rs  pext.rs  sliders.rs  types.rs
examples/: perft.rs
src/: bitboard.rs  board.rs  castle_rights.rs  color.rs  errors.rs  file.rs  lib.rs  macros.rs  move_list.rs  moves.rs  perft.rs  piece.rs  rank.rs  san.rs  square.rs  zobrist.rs
src/board/: board.rs  lookups.rs  mod.rs  movegen.rs  movemaker.rs
src/generate/: black_magics.rs  king.rs  knight.rs  pawn.rs  pext.rs  random.rs  rays.rs
tests/: san.rs  test.rs
