[package]
name = "laura_core"
version = "0.2.0"
edition = "2021"
authors = ["HansTibberio <hanstiberio@proton.me>"]
description = "A fast and efficient move generator for chess engines."
license = "GPL-3.0"
readme = "README.md"
keywords = ["chess", "game"]
categories = ["games"]
repository = "https://github.com/HansTibberio/laura"

include = ["src/*", "cargo.toml", "build_dep/*", "build.rs", "README.md"]

[features]
bmi2 = []

[lib]
name = "laura_core"
path = "src/lib.rs"
