[package]
name = "laura_core"
version = "0.4.0"
edition = "2024"
authors = ["HansTibberio <hanstiberio@proton.me>"]
description = "A fast and efficient move generator for chess engines."
license = "GPL-3.0"
readme = "README.md"
keywords = ["chess", "game"]
categories = ["games"]
homepage = "https://github.com/HansTibberio/laura_core"
repository = "https://github.com/HansTibberio/laura_core"
rust-version = "1.85.0"

include = ["src/*", "cargo.toml", "build_dep/*", "build.rs", "README.md"]

[features]
bmi2 = []

[lib]
name = "laura_core"
path = "src/lib.rs"
